# python-bot

./: .flake8  .gitignore  Makefile  README.md  TODO  bot.py  prepare.py  pyproject.toml  requirements.txt
repl/: service.py
service/: db.py  repl.py
