[tool.poetry]
name = "python_bot"
version = "0.1.0"
description = ""
authors = ["Evan Vilagov <evan.vilagov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
